--- a/DriverApp/app/src/main/res/layout/dispach_login.xml
+++ b/DriverApp/app/src/main/res/layout/dispach_login.xml
@@ -66,7 +66,7 @@
         android:drawableLeft="@drawable/password_icon"/>
 
     <Button
-        android:id="@+id/login_btn"
+        android:id="@+id/dispatch_login_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="30sp"
@@ -75,7 +75,9 @@
         android:textColor="@color/white"
         android:text="Log In"
         android:textStyle="bold"
-        android:background="@color/blue"/>
+        android:background="@color/blue"
+        android:textAllCaps="false"
+        android:textSize="20sp"/>
 
 
 
