--- a/DriverApp/app/src/main/res/layout/trips.xml
+++ b/DriverApp/app/src/main/res/layout/trips.xml
@@ -5,16 +5,51 @@
         android:layout_height="match_parent"
         android:background="@drawable/dispatch_bg">
 
-    <include
-        android:id="@+id/action_bar"
+    <RelativeLayout
+        android:id="@+id/relative"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/trips_action_bar"/>
+        android:layout_height="50sp"
+        android:background="@color/delivery_actionbar_bg_color">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/back_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/back_arrow"/>
+
+        <TextView
+            android:id="@+id/trips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/trips"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"/>
+
+
+        <ImageView
+            android:id="@+id/trips_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10sp"
+            android:src="@drawable/menu_icon" />
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
             android:layout_height="100sp"
             android:layout_width="match_parent"
-            android:layout_below="@+id/action_bar">
+            android:layout_below="@+id/relative">
 
             <RelativeLayout
                 android:id="@+id/relative1"
